turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:48: error: ';' expected but ')' found.
  rule=Array( Array( Array(1,8,0), Array(1,2,1), Array(0,1,0), Array(0,1,1)))) 
                                                                             ^